Archive ELM prototype and add wrapper-only configure

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ third_party/*
 !third_party/DependencyDeduplication.cmake
 !third_party/CMakeLists.txt
 !third_party/.gitkeep
+
+# Non-disclosure audio recordings (local only)
+/Sprachaufnahmen/*
+!/Sprachaufnahmen/.gitkeep
